made some changes

--- a/SecureRec-main/SecureRec-main/vercel.json
+++ b/SecureRec-main/SecureRec-main/vercel.json
@@ -1,28 +1,26 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build",
-          "installCommand": "npm install --legacy-peer-deps"
-        }
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build",
+        "installCommand": "npm install --legacy-peer-deps"
       }
-    ],
-    "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "https://secure-rec-backend.vercel.app/api/$1"
-      },
-      {
-        "source": "/users/(.*)",
-        "destination": "https://secure-rec-backend.vercel.app/users/$1"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }  
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://secure-rec-backend.vercel.app/api/$1"
+    },
+    {
+      "src": "/users/(.*)",
+      "dest": "https://secure-rec-backend.vercel.app/users/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
