--- a/SecureRec-main/SecureRec-main/vercel.json
+++ b/SecureRec-main/SecureRec-main/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build",
-        "installCommand": "npm install --legacy-peer-deps"
+        "installCommand": "npm install --force --legacy-peer-deps"
       }
     }
   ],
