--- a/SecureRec-main/SecureRec-main/vercel.json
+++ b/SecureRec-main/SecureRec-main/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "package.json",
@@ -22,5 +23,8 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "resolved": {
+    "node": "18"
+  }
 }
