--- a/SecureRec-main/SecureRec-main/vercel.json
+++ b/SecureRec-main/SecureRec-main/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build",
-        "installCommand": "NPM_CONFIG_LEGACY_PEER_DEPS=true npm install --force"
+        "installCommand": "npm install"
       }
     }
   ],
