--- a/SecureRec-main/SecureRec-main/package.json
+++ b/SecureRec-main/SecureRec-main/package.json
@@ -61,8 +61,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npm install --legacy-peer-deps"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -90,5 +89,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
     "sass": "^1.76.0"
-  }
+  },
+  "engines": {
+  "npm": "8.19.2"
+}
 }
