--- a/SecureRec-main/SecureRec-main/vercel.json
+++ b/SecureRec-main/SecureRec-main/vercel.json
@@ -23,5 +23,11 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "NODE_VERSION": "18.12.1",
+      "NPM_VERSION": "8.19.2"
+    }
+  }
 }
